@@ -1,3 +1,7 @@
+2008-05-12  Hans Breuer  <hans@breuer.org>
+
+	* app/find-and-replace.c : replace (al) part is working, too.
+	
 2008-05-11  Hans Breuer  <hans@breuer.org>
 
 	* lib/filer.h app/menus.c : changed signature of DiaCallbackFunc to
